--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,3 +1,8 @@
 #logonav{
-    size: 20px;
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
