--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -5,6 +5,6 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    height: 10px;
-    width: 10px;
+    height: 10;
+    width: 10;
 }
