--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -5,6 +5,6 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    height: 5rem;
-    width: 5rem;
+    height: 30%;
+    width: 30%;
 }
