--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -8,3 +8,13 @@
     height: 30%;
     width: 30%;
 }
+.buttons{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    width: 20%;
+    margin-left: 40%;
+    margin-right: 40%;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1rem;
+}
